# spdlog-mp

./: .gitignore  CMakeLists.txt  COMPLETION_REPORT.md  MUTEX_USAGE_ANALYSIS.md  README.md  TODO.md  WORK_SUMMARY.md  XMAKE_BUILD.md  xmake.lua
bench/: CMakeLists.txt  multiprocess_bench.cpp
example/: CMakeLists.txt  example_mp2.cpp  example_mp3.cpp  example_mp4.cpp  multiprocess_default_example.cpp  multiprocess_fork_example.cpp  multiprocess_offset_example.cpp  multiprocess_separate_example.cpp
example/mp1_standalone/: CMakeLists.txt  example_mp1_consumer.cpp  example_mp1_producer.cpp  xmake.lua
example/mp2_standalone/: CMakeLists.txt  xmake.lua
include/spdlog/: async.h  async_logger-inl.h  async_logger.h  common-inl.h  common.h  formatter.h  fwd.h  logger-inl.h  logger.h  mdc.h  pattern_formatter-inl.h  pattern_formatter.h  spdlog-inl.h  spdlog.h  stopwatch.h  tweakme.h  version.h
include/spdlog/cfg/: argv.h  env.h  helpers-inl.h  helpers.h
include/spdlog/details/: backtracer-inl.h  backtracer.h  circular_q.h  console_globals.h  file_helper-inl.h  file_helper.h  fmt_helper.h  log_msg-inl.h  log_msg.h  log_msg_buffer-inl.h  log_msg_buffer.h  mpmc_blocking_q.h  null_mutex.h  os-inl.h  os.h  periodic_worker-inl.h  periodic_worker.h  registry-inl.h  registry.h  synchronous_factory.h  tcp_client-windows.h  tcp_client.h  thread_pool-inl.h  thread_pool.h  udp_client-windows.h  udp_client.h
include/spdlog/fmt/: bin_to_hex.h  chrono.h  compile.h  fmt.h  ostr.h  ranges.h  std.h  xchar.h
include/spdlog/fmt/bundled/: base.h  format.h
include/spdlog/multiprocess/: README.md  common.h  custom_formatter.h  lock_free_ring_buffer.h  mode.h  shared_memory_consumer_sink.h  shared_memory_manager.h  shared_memory_producer_sink.h
include/spdlog/sinks/: android_sink.h  ansicolor_sink-inl.h  ansicolor_sink.h  base_sink-inl.h  base_sink.h  basic_file_sink-inl.h  basic_file_sink.h  callback_sink.h  daily_file_sink.h  dist_sink.h  dup_filter_sink.h  hourly_file_sink.h  kafka_sink.h  mongo_sink.h  msvc_sink.h  null_sink.h  ostream_sink.h  qt_sinks.h  ringbuffer_sink.h  rotating_file_sink-inl.h  rotating_file_sink.h  sink-inl.h  sink.h  stdout_color_sinks-inl.h  stdout_color_sinks.h  stdout_sinks-inl.h  stdout_sinks.h  syslog_sink.h  systemd_sink.h  tcp_sink.h  udp_sink.h  win_eventlog_sink.h  wincolor_sink-inl.h  wincolor_sink.h
linux-test/: main.cpp  test_eventfd.cpp  test_poll_duration_config.cpp  test_polling_optimization.cpp  test_polling_vs_notification.cpp  xmake.lua
onePet/: CMakeLists.txt
onePet/include/: main.h
onePet/include/dpu/: dpu.h
onePet/include/scu/: scu.h
onePet/include/utils/: logger.h
onePet/src/: main.cpp
onePet/src/dpu/: dpu.cpp
onePet/src/scu/: scu.cpp
onePet/src/utils/: logger.cpp
src/: async.cpp  cfg.cpp  color_sinks.cpp  file_sinks.cpp  spdlog.cpp  stdout_sinks.cpp
src/multiprocess/: config.cpp  lock_free_ring_buffer.cpp  mode.cpp  shared_memory_consumer_sink.cpp  shared_memory_manager.cpp  shared_memory_producer_sink.cpp
tests/: CMakeLists.txt
tests/multiprocess/: CMakeLists.txt  test_alignment.cpp  test_backward_compatibility.cpp  test_config.cpp  test_error_handling.cpp  test_integration.cpp  test_lock_free_ring_buffer.cpp  test_notify_mode_config.cpp  test_performance.cpp  test_resource_cleanup.cpp  test_shared_memory_consumer_sink.cpp  test_shared_memory_consumer_sink_properties.cpp  test_shared_memory_manager.cpp  test_shared_memory_producer_sink.cpp
tools/: CMakeLists.txt  shm_cleanup.cpp
~/spdlog-mp-test/: main.cpp  xmake.lua
